--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Header -->
     <header>
         <div class="header-container">
-            <img src="froll_48.png" alt="FrollSwap Logo" class="logo">
+            <img src="froll_48.png" alt="Froll Logo" class="logo">
             <h1>Welcome to the FortuneRolls Ecosystem</h1>
             <p>Your gateway to decentralized, transparent gaming.</p>
         </div>
@@ -28,14 +28,7 @@
         <p>Join the FROLL ecosystem today and enjoy the most transparent and secure games!</p>
     </section>
 
-    <!-- Kết nối ví và Swap FROLL/VIC -->
-    <section id="connect-section" class="section">
-        <h2>Swap FROLL/VIC</h2>
-        <p>Swap FROLL for VIC and participate in our exciting decentralized games!</p>
-        <div class="button-container">
-            <button id="connect-wallet" class="button">Swap FROLL/VIC</button>
-        </div>
-    </section>
+    
 
     <!-- Hệ sinh thái FROLL -->
     <section id="ecosystem" class="section">
@@ -74,38 +67,7 @@
         </ul>
     </section>
 
-    <!-- Giao diện Swap -->
-    <div id="swap-interface" class="interface" style="display: none;">
-        <header class="swap-header">
-            <div id="wallet-address" class="wallet-address"></div>
-            <button id="disconnect-wallet" class="button">Disconnect Wallet</button>
-        </header>
-        <h1>Swap</h1>
-        <div class="swap-container">
-            <div class="token-input">
-                <img id="from-token-logo" src="vic_24.png" alt="From Token">
-                <div>
-                    <p id="from-token-info">VIC: 0.0000</p>
-                    <input type="number" id="from-amount" placeholder="0.0">
-                </div>
-                <button id="max-button" class="button">Max</button>
-            </div>
-            <button id="swap-direction" class="swap-direction">↔️</button>
-            <div class="token-input">
-                <img id="to-token-logo" src="froll_24.png" alt="To Token">
-                <div>
-                    <p id="to-token-info">FROLL: 0.0000</p>
-                    <input type="text" id="to-amount" placeholder="0.0" disabled>
-                </div>
-            </div>
-        </div>
-        <div class="swap-details">
-            <p id="transaction-fee">Transaction Fee: 0.01 VIC</p>
-            <p id="gas-fee">Estimated Gas Fee: ~0.000029 VIC</p>
-        </div>
-        <button id="swap-now" class="button">Swap Now</button>
-    </div>
-
+   
     <!-- Chân trang và mạng xã hội -->
     <footer id="footer" class="footer">
         <div class="social-links">
