--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
         <p><strong>FROLL</strong> was created to solve this problem. By leveraging <strong>blockchain technology</strong> and integrating with <strong>MetaMask</strong>, FROLL ensures that every transaction, result, and interaction in the ecosystem is <strong>publicly verifiable</strong> and <strong>transparent</strong>. Everything is recorded on the blockchain, immutable and fully auditable.</p>
         <p>With FROLL, games like <strong>Dice Game</strong> and <strong>Lottery</strong> are no longer just a gamble—every roll, every ticket, and every reward is backed by blockchain, ensuring fairness for everyone.</p>
         <p>Join the FROLL ecosystem today and enjoy the most transparent and secure games!</p>
+        <h2>💎 FROLL Token – A Scarce Asset on VIC Blockchain</h2>
+        <p><strong>Name:</strong> FortuneRolls</p>
+        <p><strong>Symbol:</strong> FROLL</p>
+        <p><strong>Blockchain:</strong> Viction (VIC)</p>
+        <p><strong>Max Supply:</strong> 1,000,000</p>
+        <p><strong>Contract:</strong> <a href="https://www.vicscan.xyz/token/0xB4d562A8f811CE7F134a1982992Bd153902290BC" target="_blank">View on VicScan</a></p>
     </section>
 
     
