--- a/index.html
+++ b/index.html
@@ -1,200 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>FROLL Dice – On-Chain Even/Odd (VIC)</title>
-  <meta name="description" content="Provably-fair even/odd with FROLL on VIC. Bowl reveal matches on-chain parity."/>
-  <link rel="icon" href="froll_48.png" type="image/png"/>
-  <link rel="stylesheet" href="style.css"/>
-
-  <!-- Ethers.js v5 (CDN) -->
-  <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.min.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Froll.org — Transparent & Fair</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
+  <script src="app.js" defer></script>
 </head>
 <body>
-  <noscript>This app requires JavaScript to run.</noscript>
+  <!-- Header -->
+  <header class="header">
+    <div class="logo">
+      <img src="images/logo.png" alt="FROLL Logo">
+      <h1>FROLL</h1>
+    </div>
+    <div class="price-box">
+      <span id="price">Loading price...</span>
+    </div>
+    <button id="connectButton">Connect Wallet</button>
+  </header>
 
-  <!-- ===== HOME ===== -->
-  <div class="container" id="home-interface">
-    <!-- Header -->
-    <header class="header">
-      <div class="brand">
-        <img src="froll_48.png" alt="FROLL" class="logo"/>
-        <div class="brand-text">
-          <h1>FROLL Dice</h1>
-          <p class="subtitle">Provably-fair on VIC • Parity comes from the smart contract</p>
-        </div>
-      </div>
-
-      <div class="wallet-box">
-        <!-- Guide -->
-        <a id="btn-guide" class="btn accent" href="https://docs.google.com/document/d/1IEUP8x_xSOUhbFBAuG012VA5HW_O9MuI/edit" target="_blank" rel="noopener">
-          Guide / How to play
-        </a>
-
-        <!-- THAY NÚT SWAP = LINK TRADE DEX-TRADE -->
-        <a id="btn-trade" class="btn accent"
-           href="https://dex-trade.com/spot/trading/FROLLUSDT?interface=classic"
-           target="_blank" rel="noopener">
-          Trade FROLL/USDT on Dex-Trade.com
-        </a>
-
-        <!-- Wallet -->
-        <button id="btn-connect" class="btn primary" onclick="window.connectWallet && window.connectWallet()">Play Dice Game</button>
-        <div id="wallet-info" class="wallet-info hidden">
-          <span id="addr-short">—</span>
-          <button id="btn-disconnect" class="btn ghost" onclick="window.disconnectWallet && window.disconnectWallet()">Disconnect</button>
-        </div>
-      </div>
-    </header>
-
-    <!-- DÒNG GIÁ -->
-    <section class="panel" id="price-panel">
-      <strong id="price-text" class="skeleton">Loading price...</strong>
+  <!-- Main Content -->
+  <main>
+    <section class="intro">
+      <h2>Transparent, Fair & Fully On-Chain</h2>
+      <p>
+        FROLL runs on the <strong>Viction Blockchain</strong>.  
+        Play games, swap tokens, and explore the decentralized ecosystem with trust and fairness.
+      </p>
     </section>
 
-    <!-- Balances -->
-    <section class="panel" id="balances-panel">
-      <h2>Balances</h2>
-      <div class="balances-grid">
-        <div class="card">
-          <div class="label">VIC</div>
-          <div id="vic-balance" class="value">0.0000</div>
-        </div>
-        <div class="card">
-          <div class="label">FROLL</div>
-          <div id="froll-balance" class="value">0.0000</div>
-        </div>
-        <div class="card">
-          <div class="label">Contract Pool</div>
-          <div id="pool-balance" class="value">—</div>
-        </div>
+    <section class="features">
+      <div class="feature">
+        <h3>🎲 Play Dice</h3>
+        <p>Bet even/odd with full transparency — powered by blockchain randomness.</p>
+        <button id="playDiceBtn">Play Now</button>
       </div>
-      <p class="note">Token: FROLL (18 decimals) • Network: VIC • Results are from on-chain events.</p>
+      <div class="feature">
+        <h3>🔁 Swap</h3>
+        <p>Swap FROLL/VIC directly on-chain. Simple, secure, and fixed rate.</p>
+        <button id="swapBtn">Swap Now</button>
+      </div>
     </section>
+  </main>
 
-    <!-- Table -->
-    <section class="panel" id="table-panel">
-      <h2>Select Table (enter Min)</h2>
-      <div class="custom-table">
-        <label for="minBet">Min Bet (FROLL) — minimum 0.001</label>
-        <input id="minBet" type="number" min="0.001" step="0.001" placeholder="e.g., 1.25"/>
-        <button id="btn-set-table" class="btn accent">Set Table</button>
-      </div>
-      <div class="current-table">
-        Current table: <span id="current-table">Not set</span>
-      </div>
-      <p class="note">Max Bet = Min Bet × 50 (on-chain rule).</p>
-    </section>
-
-    <!-- Play -->
-    <section class="panel" id="play-panel">
-      <h2>Play Even / Odd</h2>
-      <div class="bet-row">
-        <div class="toggle">
-          <button id="btn-even" class="btn toggle active" data-side="even">Even</button>
-          <button id="btn-odd" class="btn toggle" data-side="odd">Odd</button>
-        </div>
-        <div class="amount-box">
-          <label for="bet-amount">Bet Amount (FROLL)</label>
-          <input id="bet-amount" type="number" min="0.001" step="0.001" placeholder="e.g., 0.005"/>
-        </div>
-      </div>
-
-      <div class="actions">
-        <button id="btn-clear" class="btn ghost" title="Clear amount">Clear</button>
-        <button id="btn-half" class="btn ghost" title="Half the amount">½</button>
-        <button id="btn-double" class="btn ghost" title="Double the amount">Double</button>
-        <button id="btn-repeat" class="btn ghost" title="Repeat last round">Repeat</button>
-
-        <!-- Approve amount input + button -->
-        <input id="approve-amount" class="inline-input" type="number" min="0" step="0.001" placeholder="Approve amount (FROLL)"/>
-        <button id="btn-approve" class="btn accent" title="Approve FROLL to the contract">Approve FROLL</button>
-
-        <button id="btn-play" class="btn primary fire" title="Shake & Play">Place Bet</button>
-      </div>
-
-      <div class="limits">
-        Table limits: <span id="limit-min">—</span> – <span id="limit-max">—</span> FROLL
-      </div>
-
-      <div id="tx-status" class="status"></div>
-    </section>
-
-    <!-- Latest result -->
-    <section class="panel" id="result-panel">
-      <h2>Latest Result</h2>
-      <div class="result-grid">
-        <div class="card">
-          <div class="label">Outcome</div>
-          <div id="last-outcome" class="value">—</div>
-        </div>
-        <div class="card">
-          <div class="label">Win / Lose</div>
-          <div id="last-payout" class="value">—</div>
-        </div>
-        <div class="card">
-          <div class="label">Tx Hash</div>
-          <div id="last-tx" class="value ellipsis">—</div>
-        </div>
-      </div>
-      <p class="note">On page load, bowl reveals the most recent contract round.</p>
-    </section>
-
-    <!-- Stage -->
-    <section class="panel" id="stage-panel">
-      <h2>Stage</h2>
-      <div class="stage">
-        <div id="bowl" class="bowl" aria-label="Shaking bowl"></div>
-        <div id="coins" class="coins"></div>
-      </div>
-      <p class="note">After you play, the bowl shakes and reveals the exact on-chain parity.</p>
-    </section>
-
-    <!-- Footer (giữ nguyên) -->
-    <footer class="footer">
-      <div class="links">
-        <a href="https://Lottery.vin" target="_blank" rel="noopener">Lottery.vin</a>
-        <span>•</span>
-        <a href="https://Froll.net" target="_blank" rel="noopener">Froll.net</a>
-        <span>•</span>
-        <a href="https://t.me/FortuneRolls" target="_blank" rel="noopener">Telegram</a>
-        <span>•</span>
-        <a href="https://x.com/FortuneRolls" target="_blank" rel="noopener">X</a>
-      </div>
-      <div class="fine">No admins. No tricks. Just code and trust.</div>
-    </footer>
-  </div>
-  <!-- ===== END HOME ===== -->
-
-  <!-- ===== (ĐÃ GỠ BỎ SWAP UI) ===== -->
-
-  <!-- ===== PRICE SCRIPT (Dex-Trade) ===== -->
-  <script>
-    (function priceTicker(){
-      const el = document.getElementById('price-text');
-      if (!el) return;
-      const url = 'https://api.dex-trade.com/v1/public/ticker?pair=FROLLUSDT';
-      async function tick(){
-        try{
-          const res = await fetch(url, { cache: 'no-store' });
-          const data = await res.json();
-          const price = parseFloat(data.last);
-          if (!Number.isFinite(price)) throw new Error('Bad price');
-          el.textContent = `1 FROLL = ${price.toFixed(4)} USD`;
-          el.classList.remove('skeleton');
-        }catch(e){
-          console.error('Dex-Trade price fetch error:', e);
-          el.textContent = 'Price unavailable';
-          el.classList.remove('skeleton');
-        }
-      }
-      tick();
-      setInterval(tick, 10000);
-    })();
-  </script>
-
-  <!-- App logic -->
-  <script src="app.js"></script>
+  <!-- Footer (giữ nguyên) -->
+  <footer class="footer">
+    <div class="links">
+      <a href="https://Lottery.vin" target="_blank" rel="noopener">Lottery.vin</a>
+      <span>•</span>
+      <a href="https://Froll.net" target="_blank" rel="noopener">Froll.net</a>
+      <span>•</span>
+      <a href="https://t.me/FortuneRolls" target="_blank" rel="noopener">Telegram</a>
+      <span>•</span>
+      <a href="https://x.com/FortuneRolls" target="_blank" rel="noopener">X</a>
+    </div>
+    <div class="fine">No admins. No tricks. Just code and trust.</div>
+  </footer>
 </body>
 </html>
